    author name within brakets and the comment:

S <mave> comment goes here

   where S can be one of the following symbols:
    '+' : means that something has been added to NNFW
    '-' : means that something has been dropped from NNFW
    'B' : means a BugFix
    'C' : means that something has been changed (e.g. implementation of a Class or a signature method)
==== End of Legend ====

+ <mave> added class BackPropagationAlgo, a sub-class of LearningAlgorithm for BackPropagation
+ <mave> implemented clone method to sub-classes of MatrixModifier and VectorModifier
C <mave> renamed some methods of sub-classes of MatrixModifier
C <mave> Variant methods getRealVec and getRealMat now returns non-const pointers
C <mave> now Modifier class inheritance from Clonable
+ <mave> added methods setVectorModifier, setMatrixModifier to LearningAlgorithm

    ==> 201 - 10/05/2007 <==

C <mave> Factory map "MatrixLinker" to "DotLinker" for backward compatibility

    ==> 200 - 10/05/2007 <==

C <mave> Cluster::accumulate() renamed to setAccumulate()
- <mave> remove Cluster::size(); use Cluster::numNeurons()

    ==> 199 - 10/05/2007 <==

- <mave> removed deprecated methods: MatrixLinker::getRows() and getCols()
B <mave> adjusted Doxygen documentation; now all methods are displayed corretcly
C <mave> MatrixLinker is now Abstract; use DotLinker
+ <mave> added a method RealVec::neg() but with different signature that old VectorData::neg()
- <mave> removed the method VectorData::neg()
C <mave> changes in Doxygen documentation

    ==> 192 - 20/04/2007 - 0.8.1 release <==

+ <mave> added two method for convenience: BaseNeuralNet::addInputCluster and addOutputCluster
- <mave> removed template method BaseNeuralNet::byName
C <mave> moved VectorData::sum() to RealVec::sum()

    ==> 177 - 20/04/2007 - 0.8.0 release <==

C <mave> Cluster::size() renamed into numNeurons()

    ==> 176 - 20/04/2007 <==

B <mave> bugfix in assignment operator of RealVec and VectorData