@@ -15,6 +15,10 @@ S <mave> comment goes here
     'C' : means that something has been changed (e.g. implementation of a Class or a signature method)
 ==== End of Legend ====
 
+    ==> 218 - 25/05/2007 <==
+
+B <mave> now nnfw-config report correctly the MKL include directory
+C <mave> renamed RealVec::mul to RealVec::outprod, and bugfixed
 + <mave> added class BackPropagationAlgo, a sub-class of LearningAlgorithm for BackPropagation
 + <mave> implemented clone method to sub-classes of MatrixModifier and VectorModifier
 C <mave> renamed some methods of sub-classes of MatrixModifier
